WINKSTART-457: Fixed a bug in callflows / ring groups, if device's name was too long, the popup was broken.

--- a/htdocs/whapps/voip/callflow/css/two_columns.css
+++ b/htdocs/whapps/voip/callflow/css/two_columns.css
@@ -61,8 +61,22 @@
     height: 22px;
     line-height: 22px;
     list-style-type: none;
+    overflow: hidden;
     position: relative;
 }
+
+#two_columns .item_name {
+    float:left;
+    overflow: hidden;
+    height: 22px;
+    line-height: 22px;
+    width: 180px;
+    white-space: nowrap;
+}
+#two_columns .item_name.right {
+    width: 110px;
+}
+
 #two_columns .wrapper li:hover {
     background-color: #0097BB;
 }
